# CUDANet

./: .gitignore  CMakeLists.txt  run_tests.sh
examples/inception_v3/: inception_modules.cpp
include/: backend.hpp  cudanet.cuh  cudanet.hpp  layer.hpp  model.hpp  module.hpp  shape.hpp  tensor.hpp
include/backend/: backend.hpp  cpu.hpp  cuda.cuh  cuda_backend.cuh  tensor.hpp
include/backend/cpu/: cpu.hpp
include/backend/cuda/: all.cuh  cuda.cuh
include/backend/cuda/kernels/: activation_functions.cuh  convolution.cuh  matmul.cuh  pool.cuh
include/datasets/: imagenet.hpp
include/kernels/: activation_functions.cuh  pooling.cuh
include/layers/: activation.hpp  add.hpp  avg_pool.hpp  avg_pooling.hpp  batch_norm.hpp  concat.hpp  conv2d.hpp  dense.hpp  input.hpp  max_pool.hpp  max_pooling.hpp  output.hpp
src/: backend_factory.cpp  model.cpp  module.cpp  tensor.cpp
src/backends/: tensor.cpp
src/backends/cuda/: cuda.cu  cuda_backend.cu  layer_ops.cu  tensor_ops.cu
src/backends/cuda/kernels/: activation_functions.cu  convolution.cu  matmul.cu  pool.cu  pooling.cu
src/backends/cuda/layers/: conv2d.cu
src/layers/: activation.cpp  add.cpp  avg_pooling.cpp  batch_norm.cpp  concat.cpp  conv2d.cpp  dense.cpp  input.cpp  max_pool.cpp  max_pooling.cpp  output.cu
test/: CMakeLists.txt  test_utils.hpp
test/cuda/: cuda_test_utils.hpp  test_activation.cu  test_convolution.cu  test_matmul.cu  test_pool.cu
test/cuda/layers/: test_avg_pooling.cu  test_max_pooling.cu
test/generators/: main.py  pyproject.toml
test/generators/cuda/: matmul.py
test/layers/: test_dense.cpp
test/tensor/: test_tensor.cpp
